force-app/main/default/objects/AdminTool_ReportIndex__c/AdminTool_ReportIndex__c.object-meta.xml
<CustomObject>
    <description>Stores indexed report field references for field dependency lookups.</description>
    <label>Admin Tool Report Index</label>
    <nameField>
        <displayFormat>RI-{000000}</displayFormat>
        <label>Report Index Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Tool Report Indexes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>