force-app/main/default/objects/AdminTool_ReportIndex__c/fields/LastIndexedAt__c.field-meta.xml
<CustomField>
    <fullName>LastIndexedAt__c</fullName>
    <label>Last Indexed At</label>
    <type>DateTime</type>
</CustomField>