force-app/main/default/objects/AdminTool_ReportIndex__c/fields/ReportFolder__c.field-meta.xml
<CustomField>
    <fullName>ReportFolder__c</fullName>
    <label>Report Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>