force-app/main/default/objects/AdminTool_ReportIndex__c/fields/ReportId__c.field-meta.xml
<CustomField>
    <fullName>ReportId__c</fullName>
    <label>Report ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>