force-app/main/default/objects/AdminTool_ReportIndex__c/fields/ReportLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ReportLastModifiedDate__c</fullName>
    <label>Report Last Modified Date</label>
    <type>DateTime</type>
</CustomField>