force-app/main/default/objects/AdminTool_ReportIndex__c/fields/ReportName__c.field-meta.xml
<CustomField>
    <fullName>ReportName__c</fullName>
    <label>Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>